# math_lib

./: .gitignore  CMakeLists.txt  README.md  Test(1).cpp  totoriol.cpp
mathfunc/: CMakeLists.txt  Makefile  Matrix44.h  Vector3.h  mydivider.cpp  mydivider.hpp
